--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,9 +12,10 @@ noether-rocm:
     - make -j$(nproc)
     - echo '[{"subject":"/","metrics":[{"name":"Transfer Size (KB)","value":"19.5","desiredSize":"smaller"},{"name":"Speed Index","value":0,"desiredSize":"smaller"},{"name":"Total Score","value":92,"desiredSize":"larger"},{"name":"Requests","value":4,"desiredSize":"smaller"}]}]' > performance.json
     - make -k -j$(nproc) junit realsearch=%
+    - export SUCCESS=1
   after_script:
-    - >
-      if [ -e success ]; then
+    - |
+      if [ SUCCESS == 1 ]; then
         lcov --directory . --capture --output-file coverage.info;
         bash <(curl -s https://codecov.io/bash) -f coverage.info -F interface;
         bash <(curl -s https://codecov.io/bash) -f coverage.info -F gallery;
