Op - add interface for multigrid level creation (#579)
* Op - add interface for multigrid level creation

* Op - add implementation for OperatorMultigridLevelCreate

* make style

* make tidy

* Op - add test t550, fix errors

* Tests - add Fortran version of t550

* Tests - add t511 for testing tensor basis multigrid level setup

* make style and tidy

* Tests - fix t55* memory leaks

* Tests - add t552 for non-tensor basis multigrid levels

* CUDA - use CeedIntMax in shared CUDA backend

* Tests - add OCCA test exception for t55*

* Op - add lvector global prolongation multiplicity, simplifies user interface

* Solids - convert example to new interface

* make style

* Tests - convert t550 to multicomponent

* Solids - drop unused ceed_fine

* Python - add new multigrid level interface

* Python - fix operator wrap, use ceed python obj rather than ceed pointer

* Gallery - update comment slightly

* Tests - remove accidental duplicate test

* Multigrid - add size=2 case as well

* Operator - drop unneeded inline

* QFunction - simplify context ownership to match vector

* make style

* Python - update multigrid function signature

* Operator - refactor prolong/restrict qfunctions as scaling qfunctions

* Vector - add testing for reciprocal and add to Fortran/Python interfaces

* CUDA - add VectorReciprocal on device

* Gallery - drop specalized versions for 'Scale', wil fix performance hit later

* Hip - add vector reciprocal

* Operator - add more flexible prologation basis creation interface

* Vec - make sure data is set for VectorReciprocal

* Tests - drop ncomp for t550/1 so kernel is not too large for Magma backend

* Tests - add missing lcov markers

* make style

* Travis - allow ARM job to fail

* Travis - fix intel install

* Travis - try different install dir name for inteloneapi

* Travis - add ifort, ipp packages

* Tests - add missing lcov marker

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,21 +41,25 @@ jobs:
      os: linux
      dist: bionic
      arch: amd64
-     compiler: clang
+     compiler: icc
      env:
        - FC=ifort
        - CC=icc
-       - CXX=icc
-     before_install:
-       - export DEBIAN_FRONTEND=noninteractive
-       - sudo apt-get -qqq update
-       - sudo apt-get install -y build-essential ca-certificates cmake gnupg man-db pkg-config wget
-       - wget https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS-2023.PUB
-       - sudo apt-key add GPG-PUB-KEY-INTEL-SW-PRODUCTS-2023.PUB
-       - echo "deb https://apt.repos.intel.com/oneapi all main" | sudo tee -a /etc/apt/sources.list.d/oneAPI.list
-       - sudo apt-get -qqq update
-       - sudo apt-get install -y intel-oneapi-icc intel-oneapi-ifort
-       - . /opt/intel/inteloneapi/setvars.sh
+       - CXX=ipp
+     install:
+     - source /opt/intel/oneapi/setvars.sh
+     addons:
+       apt:
+         sources:
+         - sourceline: 'deb https://apt.repos.intel.com/oneapi all main'
+           key_url: 'https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS-2023.PUB'
+         packages:
+         - liblapack-dev
+         - libopenblas-dev
+         - valgrind-dbg
+         - intel-oneapi-icc
+         - intel-oneapi-ipp
+         - intel-oneapi-ifort
 # OSX GCC
    - name: "OSX GCC"
      os: osx
@@ -104,6 +108,14 @@ jobs:
        - cd ../..
      after_success:
        - make style-py && git diff --exit-code;
+  allow_failures:
+# ARM - current intermittant issues passing with Travis
+   - name: "ARM"
+     os: linux
+     dist: bionic
+     arch: arm64
+     compiler: gcc
+     env: FC=gfortran
 
 install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
