--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ noether-rocm:
     - rocm
   image: jedbrown/rocm:latest
   script:
-    - export COVERAGE=1 gcov=gcov-8 CC=gcc-8 CXX=gcc-8 FC=gfortran-8
+    - export COVERAGE=1 CC=gcc CXX=gcc FC=gfortran
     - make info
     - make -j$(nproc)
     - echo '[{"subject":"/","metrics":[{"name":"Transfer Size (KB)","value":"19.5","desiredSize":"smaller"},{"name":"Speed Index","value":0,"desiredSize":"smaller"},{"name":"Total Score","value":92,"desiredSize":"larger"},{"name":"Requests","value":4,"desiredSize":"smaller"}]}]' > performance.json
@@ -16,7 +16,7 @@ noether-rocm:
   after_script:
     - |
       if [ $(cat .job_status) == "SUCCESS" ]; then
-        lcov --gcov-tool /usr/bin/gcov-8 --directory . --capture --output-file coverage.info;
+        lcov --directory . --capture --output-file coverage.info;
         bash <(curl -s https://codecov.io/bash) -f coverage.info -t ${CODECOV_ACCESS_TOKEN} -F interface;
         bash <(curl -s https://codecov.io/bash) -f coverage.info -t ${CODECOV_ACCESS_TOKEN} -F gallery;
         bash <(curl -s https://codecov.io/bash) -f coverage.info -t ${CODECOV_ACCESS_TOKEN} -F backends;
