--- a/examples/solids/Makefile
+++ b/examples/solids/Makefile
@@ -14,6 +14,9 @@
 # software, applications, hardware, advanced system engineering and early
 # testbed platforms, in support of the nation's exascale computing imperative.
 
+COMMON ?= ../../common.mk
+-include $(COMMON)
+
 # Note: PETSC_ARCH can be undefined or empty for installations which do not use
 #       PETSC_ARCH - for example when using PETSc installed through Spack.
 PETSc.pc := $(PETSC_DIR)/$(PETSC_ARCH)/lib/pkgconfig/PETSc.pc
@@ -47,22 +50,8 @@ elasticity: $(src.o) | $(PETSc.pc) $(ceed.pc)
 	@mkdir -p $(@D)
 	@touch $@
 
-# Output using the 216-color rules mode
-rule_file = $(notdir $(1))
-rule_path = $(patsubst %/,%,$(dir $(1)))
-last_path = $(notdir $(patsubst %/,%,$(dir $(1))))
-ansicolor = $(shell echo $(call last_path,$(1)) | cksum | cut -b1-2 | xargs -IS expr 2 \* S + 17)
-emacs_out = @printf "  %10s %s/%s\n" $(1) $(call rule_path,$(2)) $(call rule_file,$(2))
-color_out = @if [ -t 1 ]; then \
-				printf "  %10s \033[38;5;%d;1m%s\033[m/%s\n" \
-					$(1) $(call ansicolor,$(2)) \
-					$(call rule_path,$(2)) $(call rule_file,$(2)); else \
-				printf "  %10s %s\n" $(1) $(2); fi
-# if TERM=dumb, use it, otherwise switch to the term one
-output = $(if $(TERM:dumb=),$(call color_out,$1,$2),$(call emacs_out,$1,$2))
-
-# if V is set to non-nil, turn the verbose mode
-quiet = $(if $(V),$($(1)),$(call output,$1,$@);$($(1)))
+# Quiet, color output
+quiet ?= $($(1))
 
 $(OBJDIR)/%.o : %.c | $$(@D)/.DIR
 	$(call quiet,CC) $(CPPFLAGS) $(CFLAGS) -c -o $@ $(abspath $<)
