QFunction Context Data Object (#596)
* Ctx - create context object for QFunction context data

* Context - rename UserContext -> QFunctionContext

* Ctx - add lcov markers

* Ctx - fix leak in identity QFunctions

* Hip/Cuda - rename sync functions for vector/context

* Tests - lcov marker update

* QFunction - drop unused function

* Python - fix copy-paste errors

* Ctx - update notes for Fortran usage

* Fortran - drop unneeded cast

Co-authored-by: Jed Brown <jed@jedbrown.org>

* Interface - use void* for SetData interfaces

* Make - use call quiet for NVCC

* Interface - use void* for GetData interfaces

* Make - add quiet call option for examples

* Makefile - create common makefile to reduce duplication/complexity in example makefiles

Co-authored-by: Jed Brown <jed@jedbrown.org>

--- a/examples/fluids/Makefile
+++ b/examples/fluids/Makefile
@@ -14,6 +14,9 @@
 # software, applications, hardware, advanced system engineering and early
 # testbed platforms, in support of the nation's exascale computing imperative.
 
+COMMON ?= ../../common.mk
+-include $(COMMON)
+
 PETSc.pc := $(PETSC_DIR)/$(PETSC_ARCH)/lib/pkgconfig/PETSc.pc
 CEED_DIR ?= ../..
 ceed.pc := $(CEED_DIR)/lib/pkgconfig/ceed.pc
@@ -31,9 +34,12 @@ navierstokes := $(navierstokes.c:%.c=%)
 all: $(navierstokes)
 $(navierstokes): | $(PETSc.pc) $(ceed.pc)
 
+# Quiet, color output
+quiet ?= $($(1))
+
 # Rules for building the example
 %: %.c
-	$(CC) $(CFLAGS) $(CPPFLAGS) $(LDFLAGS) $(CEED_LDFLAGS) $(abspath $<) -o $@ $(LDLIBS)
+	$(call quiet,CC) $(CFLAGS) $(CPPFLAGS) $(LDFLAGS) $(CEED_LDFLAGS) $(abspath $<) -o $@ $(LDLIBS)
 
 print: $(PETSc.pc) $(ceed.pc)
 	$(info CC      : $(CC))
