--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
-authors = ["Jeremy L Thompson <thompson.jeremy.luke@gmail.com>",
-           "Yohann Dudouit <dudouit1@llnl.gov>"]
+authors = ["Jed Brown <jed@jedbrown.org",
+           "Yohann Dudouit <dudouit1@llnl.gov>",
+           "Jeremy L Thompson <thompson.jeremy.luke@gmail.com>",]
 build = "build.rs"
 name = "ceed"
 version = "0.6.0"
@@ -14,7 +15,5 @@ name = "ceed"
 bindgen = "*"
 
 [dependencies]
-libc = "0.2.76"
-cfile = "0.5.1"
 ndarray = "*"
 lazy_static = "*"
