--- a/.travis.yml
+++ b/.travis.yml
@@ -120,7 +120,7 @@ jobs:
      install:
      script:
        - make info && make -j4
-       - cd lib && export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$PWD && cd ..
+       - export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$PWD/lib
        - cd rust && cargo build
        - cargo test
        - cd ..
