--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
-authors = ["Jed Brown <jed@jedbrown.org",
-           "Yohann Dudouit <dudouit1@llnl.gov>",
-           "Jeremy L Thompson <thompson.jeremy.luke@gmail.com>",]
+authors = [
+    "Jed Brown <jed@jedbrown.org>",
+    "Yohann Dudouit <dudouit1@llnl.gov>",
+    "Jeremy L Thompson <thompson.jeremy.luke@gmail.com>",
+]
 build = "build.rs"
 name = "libceed"
 version = "0.7.0"
@@ -11,5 +13,11 @@ edition = "2018"
 [lib]
 name = "libceed"
 
+[features]
+default = ["static"]
+static = []
+system = []
+
 [build-dependencies]
 bindgen = "*"
+pkg-config = "0.3.19"
