--- a/.github/workflows/julia-documentation.yml
+++ b/.github/workflows/julia-documentation.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
       - uses: julia-actions/setup-julia@latest
