--- a/.github/workflows/julia-test-with-style.yml
+++ b/.github/workflows/julia-test-with-style.yml
@@ -7,7 +7,7 @@ jobs:
   test:
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-20.04]
         julia-version: ['1']
 
     runs-on: ${{ matrix.os }}
