--- a/.github/workflows/c-fortran-test-hardware.yml
+++ b/.github/workflows/c-fortran-test-hardware.yml
@@ -10,6 +10,7 @@ jobs:
         os: [ubuntu-20.04]
         compiler: [gcc-9]
         arch: [aarch64, ppc64le]
+        distro: [ubuntu20.04]
 
     runs-on: ${{ matrix.os }}
 
