rust: make top-level workspace and use libceed from path
This allows a single "cargo test" from the top level.

--- a/examples/rust/ex2-surface/Cargo.toml
+++ b/examples/rust/ex2-surface/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "ex2-surface"
-version = "1.0.0"
+version = "0.1.0"
 authors = [
     "Jeremy L Thompson <thompson.jeremy.luke@gmail.com>",
 ]
 edition = "2018"
 
 [dependencies]
-libceed = { git = "https://github.com/CEED/libCEED", branch = "main" }
+libceed = { path = "../../../rust" }
