Rust - test and style from workspace

--- a/.github/workflows/rust-test-with-style.yml
+++ b/.github/workflows/rust-test-with-style.yml
@@ -26,9 +26,7 @@ jobs:
       run: |
         make info
         make -j2
-        cd rust && cargo build
         cargo test
-        cd ..
     - name: Rust style
       run: |
-        cd rust && cargo fmt -- --check
+        cargo fmt -- --check
