--- a/examples/rust/ex2-surface/Cargo.toml
+++ b/examples/rust/ex2-surface/Cargo.toml
@@ -7,4 +7,5 @@ authors = [
 edition = "2018"
 
 [dependencies]
+structopt = { version = "0.3", default-features = false }
 libceed = { path = "../../../rust" }
