Rust - add examples (#683)
* Rust - initial version of ex1

Example - move closure

Co-authored-by: Jed Brown <jed@jedbrown.org>

typo fix

Co-authored-by: Jed Brown <jed@jedbrown.org>

minor tidying

order -> degree

drop operator applicaiton messages

* rust: make top-level workspace and use libceed from path

This allows a single "cargo test" from the top level.

* rust: add version-sync (to help us remember when we publish a crate)

* examples - consistency update

* Rust - add Cargo.lock to top level gitignore

* rust - refactor example to add tests

* Rust - test and style from workspace

* Rust - update year in header

* Rust - add error values to Error, switch to String

* Rust - add input validation in check

* Rust - format volume output in example

* Rust - update example help output

* Rust - example tests rename to simplify

* Rust - split example 1 into 3 parts

* rust: std::sync::Once for CeedRegisterAll()

* Promote CeedRegisterAll() and CeedQFunctionRegisterAll() to User
* Guard calls to CeedInit() to avoid races in parallel testing

* Examples - update rust example to new builder syntax

* Examples - add rust ex2

* Rust - add CEED_STRIDES_BACKEND

* Examples - drop unused restriction in ceed ex2

* Rust - minor documentation update

* Rust - adopt convention of 'dimension-like' values all using usize; reduces casting

* Actions - add Rust code coverage

* Rust - fix usize conversion

* Rust - update casting between i32(C interface)  and usize(Rust interface)

* Actions - include Rust doctests

* Actions - Rust doctest coverange only avaliable in nightly

* Rust - drop explict typing of values passed to C get* functions

* Rust - modify version numbers tests, cargo-tarpaulin and cargo have different calling paths in tests

* cargo fmt

* Examples - add separate Rust example quiet mode

* Actions - rustfmt not always avaliable on nightly

* Rust - simplify version tests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,11 @@ noether-rocm:
   script:
 # Compilers
     - export COVERAGE=1 CC=gcc CXX=g++ FC=gfortran HIPCC=hipcc
-    - $CC --version && $CXX --version && $FC --version && $HIPCC --version
+    - echo "---------- CC -------------" && $CC --version
+    - echo "---------- CXX ------------" && $CXX --version
+    - echo "---------- FC -------------" && $FC --version
+    - echo "---------- HIPCC ----------" && $HIPCC --version
+    - echo "---------- GCOV -----------" && gcov --version
 # MAGMA from dev branch
     - export MAGMA_DIR=/projects/hipMAGMA && git -C $MAGMA_DIR describe
 # PETSc with HIP (minimal)
